EPBDS-15439 Projects Merge API (Check, Merge, Resolve Conflicts) (#1284)